# barebones-fabios

./: .gitignore  CMakeLists.txt  Makefile  README.md  flake.nix
config/: grub.cfg
scripts/: multiboot-check.sh
src/: kernel.cpp  linker.ld
src/arch/: boot.s
src/core/: vga.cpp  vga.h
src/core/memory/: memory_manager.cpp  memory_manager.h  memory_map.cpp  memory_map.h  multiboot.h  multiboot_info.h  multiboot_parser.cpp  multiboot_parser.h  pmm.cpp  pmm.h
src/core/vga/: vga_console.cpp  vga_console.h
src/kernel/: kernel.cpp
src/lib/: hex_util.cpp  hex_util.h  kernel_string.cpp  kernel_string.h  log.cpp  log.h  logger.cpp  logger.h
src/tests/: kernel_test.cpp
test/: kernel_string_test.cpp
